--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Explore Services
 </div>
 <h3 class="text-xl font-bold mb-4 text-gray-800">Distribution Strategy</h3>
 <p class="text-gray-600 mb-6">We develop comprehensive distribution strategies that optimize your supply chain, reduce costs, and ensure your products reach consumers efficiently across urban and rural markets.</p>
-<a href="#" class="text-primary font-medium inline-flex items-center hover:underline distribution-learn-more-btn">
+<a href="Detailed-Project-Case-Study.html" data-readdy="true" class="text-primary font-medium inline-flex items-center hover:underline">
 Learn More
 <i class="ri-arrow-right-line ml-2"></i>
 </a>
