`Update link in Route-to-Market Planning section to service2.html`

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Learn More
 </div>
 <h3 class="text-xl font-bold mb-4 text-gray-800">Route-to-Market Planning</h3>
 <p class="text-gray-600 mb-6">Our tailored route-to-market strategies help you navigate the complex East African retail landscape, identifying the most effective channels to reach your target consumers.</p>
-<a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/de0ee1d6-b817-49de-a780-dccd74a6089f" data-readdy="true" class="text-primary font-medium inline-flex items-center hover:underline">
+<a href="service2.html" data-readdy="true" class="text-primary font-medium inline-flex items-center hover:underline">
 Learn More
 <i class="ri-arrow-right-line ml-2"></i>
 </a>
