`Refactored navigation and links in Distribution-strategy.html`

--- a/Distribution-strategy.html
+++ b/Distribution-strategy.html
@@ -129,15 +129,11 @@ input:focus, textarea:focus {
 <div class="progress-bar" id="progress-bar"></div>
 
 <!-- Header/Navigation -->
-<header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
+<header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
   <div class="container mx-auto px-4 py-3 flex justify-between items-center">
     <a href="#" class="flex items-center space-x-3">
       <!-- Replace text logo with larger image logo -->
       <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
-      <div class="hidden md:block">
-        <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
-        <p class="text-xs text-gray-500">Member of Strathwell Group</p>
-      </div>
     </a>
     <nav class="hidden md:flex items-center space-x-8">
       <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
@@ -153,7 +149,7 @@ input:focus, textarea:focus {
   <!-- Mobile Menu -->
   <div class="md:hidden hidden bg-white w-full absolute top-full left-0 shadow-md" id="mobile-menu">
     <div class="container mx-auto px-4 py-3 flex flex-col space-y-4">
-      <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="text-gray-800 font-medium py-2 border-b border-gray-100">Home</a>
+      <a href="index.html" data-readdy="true" class="text-gray-800 font-medium py-2 border-b border-gray-100">Home</a>
       <a href="#about" class="text-gray-800 font-medium py-2 border-b border-gray-100">About Us</a>
       <a href="#services" class="text-gray-800 font-medium py-2 border-b border-gray-100">Services</a>
       <a href="#projects" class="text-gray-800 font-medium py-2 border-b border-gray-100">Projects</a>
@@ -164,7 +160,7 @@ input:focus, textarea:focus {
 
 <!-- Back to Projects Button -->
 <div class="fixed left-6 top-24 z-40">
-  <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="flex items-center bg-white shadow-md rounded-full py-2 px-4 text-primary hover:bg-gray-50 transition-colors">
+  <a href="index.html" class="flex items-center space-x-2 bg-white shadow-md rounded-lg px-4 py-2 text-gray-800 hover:bg-gray-100 transition-colors">
     <i class="ri-arrow-left-line mr-2"></i>
     <span class="font-medium">Back to Projects</span>
   </a>
