edited the page links

--- a/Distribution-strategy.html
+++ b/Distribution-strategy.html
@@ -149,17 +149,13 @@ header .container img {
     <a href="#" class="flex items-center space-x-3">
       <!-- Logo with correct dimensions -->
       <img src="assets/logo.png" alt="Fadan Logo" class="h-14 md:h-16 w-auto" style="height:3.5rem;">
-      <div class="hidden md:block">
-        <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
-        <p class="text-xs text-gray-500">Member of Strathwell Group</p>
-      </div>
     </a>
     <nav class="hidden md:flex items-center space-x-8">
-      <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
-      <a href="#about" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">About Us</a>
-      <a href="#services" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
-      <a href="#projects" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Projects</a>
-      <a href="#contact" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
+      <a href="index.html" data-readdy="true" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
+      <a href="index.html/about" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">About Us</a>
+      <a href="index.html/services" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
+      <a href="index.html/services" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Projects</a>
+      <a href="index.html/contact" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
     </nav>
     <button class="md:hidden flex items-center justify-center w-10 h-10 text-gray-700" id="mobile-menu-button">
       <i class="ri-menu-line ri-2x"></i>
@@ -168,11 +164,11 @@ header .container img {
   <!-- Mobile Menu -->
   <div class="md:hidden hidden bg-white w-full absolute top-full left-0 shadow-md" id="mobile-menu">
     <div class="container mx-auto px-4 py-3 flex flex-col space-y-4">
-      <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="text-gray-800 font-medium py-2 border-b border-gray-100">Home</a>
-      <a href="#about" class="text-gray-800 font-medium py-2 border-b border-gray-100">About Us</a>
-      <a href="#services" class="text-gray-800 font-medium py-2 border-b border-gray-100">Services</a>
-      <a href="#projects" class="text-gray-800 font-medium py-2 border-b border-gray-100">Projects</a>
-      <a href="#contact" class="text-gray-800 font-medium py-2">Contact</a>
+      <a href="index.html" data-readdy="true" class="text-gray-800 font-medium py-2 border-b border-gray-100">Home</a>
+      <a href="index.html/about" class="text-gray-800 font-medium py-2 border-b border-gray-100">About Us</a>
+      <a href="index.html/services" class="text-gray-800 font-medium py-2 border-b border-gray-100">Services</a>
+      <a href="index.html/projects" class="text-gray-800 font-medium py-2 border-b border-gray-100">Projects</a>
+      <a href="index/html/contact" class="text-gray-800 font-medium py-2">Contact</a>
     </div>
   </div>
 </header>
