`Added new services: Real Estate and Professional Cleaning, updated leadership image and added corresponding options to the services dropdown.`

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Explore Services
 <h2 class="text-3xl font-bold mb-12 text-center text-gray-800">Our Leadership</h2>
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="md:w-1/3">
-<img src="https://readdy.ai/api/search-image?query=professional%20African%20businessman%20in%20formal%20business%20attire%2C%20confident%20pose%2C%20studio%20portrait%20with%20neutral%20background%2C%20professional%20headshot%2C%20clean%20corporate%20look%2C%2040s%20age%2C%20well-groomed%2C%20serious%20expression&width=600&height=600&seq=ceo1&orientation=squarish" alt="Festus Chunga John - CEO" class="rounded-lg shadow-md w-full h-auto object-cover">
+<img src="people/festus-chunga-john.png" alt="Festus Chunga John - CEO" class="rounded-lg shadow-md w-full h-auto object-cover">
 </div>
 <div class="md:w-2/3">
 <h3 class="text-2xl font-bold mb-3 text-gray-800">Festus Chunga John</h3>
@@ -242,6 +242,30 @@ Learn More
 <h3 class="text-xl font-bold mb-4 text-gray-800">Leadership Training</h3>
 <p class="text-gray-600 mb-6 leading-relaxed">Our specialized training programs develop the skills and capabilities of your sales and distribution teams, helping you retain top talent and drive operational excellence.</p>
 <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/de0ee1d6-b817-49de-a780-dccd74a6089f" data-readdy="true" class="text-primary font-medium inline-flex items-center hover:underline">
+Learn More
+<i class="ri-arrow-right-line ml-2"></i>
+</a>
+</div>
+<!-- New Service: Real Estate -->
+<div class="service-card bg-gray-50 rounded-lg p-8 shadow-sm transition-all duration-300">
+<div class="w-16 h-16 flex items-center justify-center bg-blue-100 text-primary rounded-lg mb-6">
+<i class="ri-home-4-line ri-2x"></i>
+</div>
+<h3 class="text-xl font-bold mb-4 text-gray-800">Real Estate Services</h3>
+<p class="text-gray-600 mb-6">We provide expert consulting on real estate investments, property management, and market analysis to help you make informed decisions and maximize returns.</p>
+<a href="#" class="text-primary font-medium inline-flex items-center hover:underline">
+Learn More
+<i class="ri-arrow-right-line ml-2"></i>
+</a>
+</div>
+<!-- New Service: Professional Cleaning -->
+<div class="service-card bg-gray-50 rounded-lg p-8 shadow-sm transition-all duration-300">
+<div class="w-16 h-16 flex items-center justify-center bg-blue-100 text-primary rounded-lg mb-6">
+<i class="ri-broom-line ri-2x"></i>
+</div>
+<h3 class="text-xl font-bold mb-4 text-gray-800">Professional Cleaning Services</h3>
+<p class="text-gray-600 mb-6">Our professional cleaning consulting helps businesses optimize cleaning operations, maintain hygiene standards, and improve workplace environments.</p>
+<a href="#" class="text-primary font-medium inline-flex items-center hover:underline">
 Learn More
 <i class="ri-arrow-right-line ml-2"></i>
 </a>
@@ -522,6 +546,8 @@ Get Started
 <option value="merchandising">Merchandising</option>
 <option value="promotion">Product Promotion</option>
 <option value="training">Leadership Training</option>
+<option value="real-estate">Real Estate Services</option>
+<option value="cleaning">Professional Cleaning Services</option>
 </select>
 <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
 <i class="ri-arrow-down-s-line text-gray-400"></i>
