`Update Festus Chunga John's bio with new content`

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@ Explore Services
 <div class="md:w-2/3">
 <h3 class="text-2xl font-bold mb-3 text-gray-800">Festus Chunga John</h3>
 <p class="text-primary font-medium mb-6">Founder & Chief Executive Officer</p>
-<p class="text-gray-600 mb-6 leading-relaxed">With over 15 years of experience in the FMCG sector, Festus has established himself as a thought leader in distribution strategy and route-to-market planning across East Africa. Prior to founding Fadan Consultant Limited in 2015, he held senior positions at several multinational FMCG companies.</p>
-<p class="text-gray-600 mb-6 leading-relaxed">Festus holds an MBA from Strathmore Business School and a Bachelor's degree in Business Administration from the University of Nairobi. His innovative approach to solving complex distribution challenges has helped numerous brands achieve significant market growth.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">As founder of Fadan Consultant Limited, he leads a Nairobi-based consultancy focused on distribution strategy, logistics optimization, and market entry across East Africa. His work is grounded in practical, data-driven solutions that enhance operational efficiency and accelerate regional growth.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">Recognized for a collaborative and hands-on approach, he partners with both emerging and established enterprises to streamline route-to-market models and unlock new commercial opportunities.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">Further details on his professional background and experience will be updated to reflect an expanding portfolio and impact.</p>
 <div class="flex space-x-4">
 <a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-blue-700 transition-colors">
 <i class="ri-linkedin-fill"></i>
