`Added background image to hero section and modified layout`

--- a/index.html
+++ b/index.html
@@ -90,22 +90,23 @@ border-color: #0047AB;
 <i class="ri-whatsapp-line ri-2x"></i>
 </a>
 <!-- Hero Section -->
-<section class="hero-section h-screen flex items-center pt-16">
-<div class="container mx-auto px-4 w-full">
-<div class="max-w-3xl text-white">
-<h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">Transforming FMCG Distribution Across East Africa</h1>
-<p class="text-lg md:text-xl mb-8 max-w-2xl">Strategic consulting solutions to help your brand grow, optimize operations, and retain top talent in the competitive FMCG sector.</p>
-<div class="flex flex-col sm:flex-row gap-4">
-<a href="#contact" class="bg-primary hover:bg-blue-700 text-white font-medium py-3 px-8 !rounded-button whitespace-nowrap transition-colors inline-flex items-center justify-center">
-Schedule Consultation
-<i class="ri-arrow-right-line ml-2"></i>
-</a>
-<a href="#services" class="bg-white hover:bg-gray-100 text-primary font-medium py-3 px-8 !rounded-button whitespace-nowrap transition-colors inline-flex items-center justify-center">
-Explore Services
-</a>
-</div>
-</div>
-</div>
+<section class="hero-section h-screen flex items-center pt-16 relative" style="background-image: url('https://readdy.ai/api/search-image?query=professional%20business%20meeting%20in%20modern%20office%20with%20FMCG%20products%20displayed%2C%20executives%20discussing%20strategy%2C%20clean%20corporate%20environment%2C%20bright%20natural%20lighting%2C%20business%20professionals%20in%20formal%20attire%2C%20panoramic%20view%20of%20Nairobi%20skyline%20visible%20through%20windows%2C%20high-end%20office%20interior&width=1600&height=800&seq=hero1&orientation=landscape'); background-size: cover; background-position: center;">
+  <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+  <div class="container mx-auto px-4 w-full relative z-10">
+    <div class="max-w-3xl text-white">
+      <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">Transforming FMCG Distribution Across East Africa</h1>
+      <p class="text-lg md:text-xl mb-8 max-w-2xl">Strategic consulting solutions to help your brand grow, optimize operations, and retain top talent in the competitive FMCG sector.</p>
+      <div class="flex flex-col sm:flex-row gap-4">
+        <a href="#contact" class="bg-primary hover:bg-blue-700 text-white font-medium py-3 px-8 !rounded-button whitespace-nowrap transition-colors inline-flex items-center justify-center">
+          Schedule Consultation
+          <i class="ri-arrow-right-line ml-2"></i>
+        </a>
+        <a href="#services" class="bg-white hover:bg-gray-100 text-primary font-medium py-3 px-8 !rounded-button whitespace-nowrap transition-colors inline-flex items-center justify-center">
+          Explore Services
+        </a>
+      </div>
+    </div>
+  </div>
 </section>
 <!-- Company Introduction -->
 <section class="py-20 bg-white" id="about">
