--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@ border-color: #0047AB;
 <h2 class="text-3xl font-bold mb-12 text-center text-gray-800">Our Leadership</h2>
 <div class="flex flex-col md:flex-row gap-12 items-center">
 <div class="md:w-1/3">
-<img src="people/festus-chunga-john.png" alt="Festus Chunga John - CEO" class="rounded-lg shadow-md w-full h-auto object-cover">
+<img src="people/Cheruiyot Langat Evans.png" alt=" Cheruiyot Langat Evans - Managing Director" class="rounded-lg shadow-md w-full h-auto object-cover">
 </div>
 <div class="md:w-2/3">
-<h3 class="text-2xl font-bold mb-3 text-gray-800">Festus Chunga John</h3>
-<p class="text-primary font-medium mb-6">Founder & Chief Executive Officer</p>
-<p class="text-gray-600 mb-6 leading-relaxed">As founder of Fadan Consultant Limited, he leads a Nairobi-based consultancy focused on distribution strategy, logistics optimization, and market entry across East Africa. His work is grounded in practical, data-driven solutions that enhance operational efficiency and accelerate regional growth.</p>
-<p class="text-gray-600 mb-6 leading-relaxed">Recognized for a collaborative and hands-on approach, he partners with both emerging and established enterprises to streamline route-to-market models and unlock new commercial opportunities.</p>
-<p class="text-gray-600 mb-6 leading-relaxed">Further details on his professional background and experience will be updated to reflect an expanding portfolio and impact.</p>
+<h3 class="text-2xl font-bold mb-3 text-gray-800"> Cheruiyot Langat Evans</h3>
+<p class="text-primary font-medium mb-6">Managing Director – Fadan Consulting Services</p>
+<p class="text-gray-600 mb-6 leading-relaxed">Evans is a strategic and results-driven professional with a strong background in pensions, asset management, and financial operations. With a B.A. in Economics and specialized certification in pension management, he brings deep analytical insight and an unwavering commitment to excellence.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">Previously serving at ICEA Lion Group in various roles—including Underwriting Assistant and Portfolio Administrator—Evans has proven expertise in client management, data reconciliation, compliance, and financial reporting. He is recognized for his sharp attention to detail, team leadership, and a passion for continuous improvement.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">At Fadan, Evans is spearheading operational strategy, client success, and consultancy excellence in FMCG distribution, route-to-market planning, and business transformation. His leadership philosophy is built around customer delight, process efficiency, and fostering a culture of trust, initiative, and growth.</p>
 <div class="flex space-x-4">
 <a href="#" class="w-10 h-10 flex items-center justify-center bg-primary text-white rounded-full hover:bg-blue-700 transition-colors">
 <i class="ri-linkedin-fill"></i>
